force-app/main/default/objects/Risk_Competitor__c/Risk_Competitor__c.object-meta.xml
<CustomObject>
    <description>Joining object for At Risk Assessments and Competitors</description>
    <label>Risk Competitor</label>
    <nameField>
        <displayFormat>ARC- {000}</displayFormat>
        <label>ARC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>