force-app/main/default/objects/Risk_Competitor__c/fields/Account_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Email__c</fullName>
    <description>account manager’s email used for email alerts- populated by workflow</description>
    <label>Account Manager Email</label>
    <type>Email</type>
</CustomField>