force-app/main/default/objects/Risk_Competitor__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <description>Customer Account from the At Risk Assessment</description>
    <formula>At_Risk_Assessment__r.Customer_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account</label>
    <type>Text</type>
</CustomField>