force-app/main/default/objects/Risk_Competitor__c/fields/EAM_Email__c.field-meta.xml
<CustomField>
    <fullName>EAM_Email__c</fullName>
    <description>enterprise account manager ‘s email used for email alerts- populated by workflow</description>
    <label>EAM Email</label>
    <type>Email</type>
</CustomField>