force-app/main/default/objects/Risk_Competitor__c/fields/MAS_Email__c.field-meta.xml
<CustomField>
    <fullName>MAS_Email__c</fullName>
    <description>account manager ‘s manager’s email used for email alerts- populated by workflow</description>
    <label>MAS Email</label>
    <type>Email</type>
</CustomField>