force-app/main/default/objects/Risk_Competitor__c/fields/NA_PY_Full_Year_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>NA_PY_Full_Year_TOTAL__c</fullName>
    <formula>At_Risk_Assessment__r.Customer_Account__r.NA_PY_Full_Year_TOTAL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NA - PY Full Year - TOTAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>