force-app/main/default/objects/Risk_Competitor__c/fields/Primary_BDE_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_BDE_Email__c</fullName>
    <description>Primary BDE&apos;s email used for email alerts- populated by workflow</description>
    <label>Primary BDE Email</label>
    <type>Email</type>
</CustomField>